feat(quality): configure code quality suites and achieve SonarCloud